--- a/index.html
+++ b/index.html
@@ -13,7 +13,44 @@
 
     <!-- Nav Bar -->
 
-
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">TinDog</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- 
+        .collapse:not {
+          display:none;
+        }
+        .navbar-collapse {
+          align-items: center;
+          width: 100%;
+        }
+        @media (min-width: 992px) {
+          .navbar-expand-lg .navbar-collapse {
+            display: flex !important;
+          }
+        }
+        -> screen's width < 992px -> aria-expanded:false -> display:none     -> disappear
+                                  -> aria-expanded:true  -> display:block    -> appear in new lines (in the left by default text-align:left)
+                          >=992px -> display:flex + justify-content:flex-end -> appear in the same line at the end/right  
+        -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+          <ul class="navbar-nav ">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Download</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
 
     <!-- Title -->
