--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
 
     <!-- Title -->
 
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
+    <div class="intro">
+      <div class="intro-left">
+        <div class="intro-text">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button">Download</button>
+          <button type="button">Download</button>
+        </div>
+      </div>
       <img src="images/iphone6.png" alt="iphone-mockup">
     </div>
 
